# elfio-modern

./: .gitignore  CMakeLists.txt  LICENSE  MIGRATION.md  README.md
examples/: CMakeLists.txt  elfdump.cpp  write_obj.cpp
include/elfio/: elfio.hpp
include/elfio/core/: byte_view.hpp  endian.hpp  error.hpp  hash.hpp  lazy.hpp  result.hpp  safe_math.hpp
include/elfio/editor/: array_builder.hpp  dynamic_builder.hpp  elf_editor.hpp  layout.hpp  modinfo_builder.hpp  note_builder.hpp  relocation_builder.hpp  section_entry.hpp  segment_entry.hpp  string_table_builder.hpp  symbol_builder.hpp  versym_builder.hpp
include/elfio/platform/: schema.hpp  traits.hpp
include/elfio/views/: array_view.hpp  dump.hpp  dynamic_view.hpp  elf_file.hpp  modinfo_view.hpp  note_view.hpp  relocation_view.hpp  section_view.hpp  segment_view.hpp  string_table.hpp  symbol_view.hpp  versym_view.hpp
tests/: CMakeLists.txt  core_test.cpp  editor_test.cpp  platform_test.cpp  view_test.cpp
